Minor edits in steps 3-10

--- a/10-findable.tex
+++ b/10-findable.tex
@@ -17,7 +17,7 @@
 {Greg~Wilson}\textsuperscript{1}
 \\
 \textbf{1} RStudio, Inc.
-\textbf{2} University of California, Los Angeles
+\textbf{2} Louise M. Darling Biomedical Library, University of California, Los Angeles
 \\
 \bigskip
 * sarah.lin@rstudio.com
@@ -27,18 +27,17 @@
 
 Information ecosystems consist of users, context, and content, all three of
 which must be addressed to make information findable and usable. Library science
-principles are a framework for doing this: they help researchers improve
-findability by defining the full scope of their users' needs and leveraging the
-structural elements of the software that creates, stores, and accesses data,
-research findings, or academic communication stored locally or shared on the
-internet.
-As scholars evaluate their research communication strategies,
+principles are a framework navigating the information ecosystem. They help researchers
+improve findability by focusing on the full scope of their users' needs and by leveraging 
+structural elements of software that create, store, and access data,
+research findings, or academic communications stored locally or shared on the
+internet. As scholars evaluate their research communication strategies,
 they can use these steps to improve how their research is discovered and communicated.
 
 \section*{Author summary}
 
 Sarah Lin is the Information Architect and Digital Librarian at RStudio, PBC.
-Ibraheem Ali is the Data Sciences Librarian at the University of California, Los Angeles.
+Ibraheem Ali is the Sciences Data Librarian at the University of California, Los Angeles.
 Greg Wilson works in the education team at RStudio, PBC.
 
 \section*{Introduction}
@@ -50,11 +49,14 @@ information when needed: information may be stored in many formats, exist in
 multiple versions, and need to be shared with varied audiences for both research
 and teaching.
 
-In the last 4 years, growing adoption of FAIR principles \cite{Wilkinson2016} has helped researchers manage the data and other digital objects associated with their professional work.
-The FAIR principles encourage data to be: Findable, Accessible, Interoperable, and Reproducible.
-Indeed, research reproducibility hinges on the other 3 principles, which align completely with the following 10 tips.
-This paper is concerned with findability both including research data and extending beyond it to encompass all types of work product produced during a researcher's career, 
-inside or outside of academia.
+In the last 4 years, growing adoption of FAIR principles \cite{Wilkinson2016} has helped
+researchers manage the data and other digital objects associated with their professional
+work. The FAIR principles encourage data to be: \emph{F}indable, \emph{A}ccessible,
+\emph{I}nteroperable, and \emph{R}eproducible. Indeed, research reproducibility hinges
+on the other 3 principles, which align completely with the following 10 tips. 
+This paper is concerned with findability both including research data and extends beyond
+it to encompass all types of work products produced during a researcher's career, 
+inside or outside academic settings.
 
 Library science offers ways to work through the maze of information generated in
 professional life, and librarians' skills can be applied by any researcher who
@@ -67,15 +69,14 @@ created as well as its actual content.
 \rulemajor{1. Design for a wide range of users.}
 
 The first step in making information findable is to determine who will be doing
-the finding. This includes everyone who might contribute to your work, expand
-upon it, or re-share information through their own networks \cite{Covert2014}.
-While you might think your audience is small and knows your field well, complete
-novices will inevitably find your work if it is publicly available, thereby
-making your actual user base both larger and more diverse.  
-Diversity increases the chance that users will access your work through an intermediary, such as translation software or a screen reader, as well.
-Thinking about who
-your users are and how they interact with you and your work is the foundation of
-all ten tips.
+the finding. This includes everyone who might learn from your work, contribute to it,
+expand upon it, or re-share information through their own networks \cite{Covert2014}.
+While you might think there are only a few relevant experts who know your field well, 
+novices and trainees will also need to use your work as they gain experience in the field,
+thereby making your actual user base considerably larger and more diverse. Furthermore,
+some users need to access scholarship through an intermediary, such as translation
+software or a screen reader, as well. Being mindful of all potential users and how they
+might need to interact with you and your work is the foundation of all ten tips.
 
 The information you wish to convey and the way it is currently organized may
 make perfect sense to you, but its meaning for your users is determined by what
@@ -88,22 +89,23 @@ classification,'' ``those drawn with a very fine camel hair brush,'' and ``those
 that look like flies from far away'' \cite{Borges2000}. While this was
 deliberately ridiculous, it illustrates the fact that every way of organizing
 knowledge embodies choices by the organizer, which may or may not align with
-those of the audience.
+those of the audience. Therefore when preparing materials for sharing it is important
+to establish context, to use clear and concise language, and minimize the use of jargon.
 
 More concretely, consider the website of a faculty member coming up for tenure:
 She created the website as post-doc to publicize her papers and to make it
 easier to fill out grant applications by listing professional activities in one
-place, but:
+place, but the site might be useful in other cases as well:
 
 \begin{itemize}
 
 \item
-  Colleagues will come to the site looking for un-paywalled copies of her
-  papers, and to find out what she's currently working on or where she is next
+  Colleagues may come to the site looking for un-paywalled copies of her
+  papers, to find out what she's currently working on, or where she is next
   going to present her work.
 
 \item
-  Tenure committee members might peruse her accomplishments to determine her
+  Tenure committee members might review her accomplishments to determine her
   work's impact.
 
 \item
@@ -111,36 +113,48 @@ place, but:
   journal articles to include in the university's institutional repository.
 
 \item
-  A student might come to the site looking for course information.
+  A student might come to the site looking for course information or materials.
 
 \end{itemize}
 
-Reaching out to just a handful of users to ask for findability feedback will
-help you see any gaps in organizational alignment.
+Reaching out to a variety of users with distinct needs to ask for findability feedback will
+help you discover any gaps in organizational alignment.
 
 \rulemajor{2. Design with the end in mind.}
 
-Given how easy it is to create digital information and the plethora of software
-and formats you may employ, you almost certainly have lots of information in
-lots of different formats and locations. The second step in making things
-findable is to think about the end result you desire, before cataloging what you have, and then determining what should
-go where.
+Given the current state of technology it can be easy to rapidly create digital
+information. With the plethora of software and formats you may employ, you almost
+certainly have information in lots of different formats, file types and locations.
+The second step in making things findable is to think ahead about the things you
+would want to be found at the completion of the project before cataloging what you
+have. That way you can have time to anticipate what can go where, and adapt if
+necessary before materials are published. This is particularly relevant when
+archiving data. Different disciplines operate with their own distinct set of
+accepted standards of how things should be archived. One example of this can be
+found in the field of structural biology. Nearly all protein or molecular
+structures are submitted to the Protein Data Bank (PDB) which creates citable
+identifers for each submission and follows a set of standard file types to enable 
+reuse. This makes protein structures easily searchable with their identifier 
+and easily reusable since files are uploaded in a standardized and widely-used 
+format\cite{Wilkinson2016}. Following the standards set by experts in the field, 
+will reduce the barrier to finding relevant materials associated with your work.
 
 Figuring out what ``done'' will look like can be personally motivating, but once
-again you must determine what your users will consider a good outcome, which may
-not align with what you would do if you were the information's only consumer.
-However, remember that your future self \cite{Briney2015} is also one of your users: everyone is
-forgetful, so anything you do for others will likely pay off for yourself
-eventually.
+again, you must be mindful of what your users will consider a useful outcome, which
+may not align with what you would do if you were the information's only consumer.
+Remember that your future self is also one of your users: everyone is prone to 
+forgetfulness, so anything you do for others will likely pay off for yourself
+eventually\cite{Briney2015}.
 
-Remember too that the question of how to find something can mean different
-things. Users may need to find your (published or unpublished) work on the web, find a specific item within
-a website, and/or find a particular piece of information within a specific file
-or webpage. Depending on your content, you may have challenges in all three
-areas; the remaining tips on context and content will help you address them.
+Remember too that the strategies users employ to find something can look different 
+in different contexts. Users may need to find your (published or unpublished)
+work on the web, find a specific item within a website, and/or find a particular 
+piece of information within a specific file or item within a webpage. Depending on 
+your content, you may have challenges in all three areas; the remaining tips on 
+context and content will help you address these issues.
 
-Returning to the faculty website from the previous tip as just one example of
-varied needs:
+Elaborating on the example from the previous tip about the faculty member's website 
+we can catch a glimpse of the variety of user needs:
 
 \begin{itemize}
 
@@ -149,44 +163,51 @@ varied needs:
   of papers along with links to presentations or posters that discuss them.
  
 \item
-  The librarian will want bibliographic information for your publications in
+  A librarian might want bibliographic information for your publications in
   machine-readable form (e.g., BibTeX, MARC, or MODS), either for individual
   items or in bulk for addition to an institutional repository.
 
 \item
-  Colleagues will want all of the above, plus pointers to the software and data
-  used in order to reproduce particular results or "restart the data lifecycle" \cite{@Briney2015}.
+  Collaborators might links to articles, plus pointers to the protocols, 
+  software and data used in order to reproduce particular results or begin
+  their own lineage of inquiry.
 
 \item
-  Students will want prominent links to the university's learning management
-  system (LMS), which is where the course information they're searching for is
-  actually located.
+  Students might look for prominent links to the university's learning management
+  system (LMS) to access course materials, general information about the subject 
+  of the faculty member's research group, or employment opportunities. 
   
   \item
-  Everyone will want persistent links like Digital Object Identifiers (DOIs) \cite{DOI2020} and ORCID \cite{ORCID2020} identifiers, in order to find your papers.
+  Everyone will want persistent links like Digital Object Identifiers (DOIs) \cite{DOI2020} 
+  and ORCID \cite{ORCID2020} identifiers, in order to find your papers or research products.
 
 \end{itemize}
 
 \noindent
-Each of these users might want content organized chronologically or topically.
-It's easy to provide from websites that are generated programmatically using a
-tool such as Blogdown \cite{Xie2017} or Wordpress \cite{Williams2015}, but
-increasing the number of site navigation options may make it harder for users to
-determine how the things they find are related to each other.
+Each of the users might want content organized chronologically or topically.
+In websites that are generated programmatically using tools such as Blogdown\cite{Xie2017} 
+or Wordpress \cite{Williams2015} these organization features may be simple to implement, 
+but increasing the number of site navigation options may also make the website confusing 
+to navigate and make it unclear how the things they find are related to each other. 
+Together, authors must strike a balance between offering filtering and searching options, 
+and being as inclusive as possible when deciding what materials are worth sharing upon 
+the completed version of their work.
 
 \rulemajor{3. Use textual structure.}
 
 Findability at the document, post, or article level can be improved by taking
 advantage of the textual structures that information management programs provide
-\cite{Hedden2016}. For example, a key part of searching the web is scanning the
+\cite{Hedden2016}. <might be useful to define textual strctures here>. For example, 
+a key part of searching the web is scanning the
 text returned by search engines to see if it contains target information.
 Textual structure helps that process \cite{Krug2014}: formatted headers (rather
 than just enlarged text), bulleted or numbered lists, and \textbf{highlighting}
 terms that are important all make both the information and its structure easier
 to understand. Similarly, headings and table of contents can be hyperlinked,
 which supports both scanning and navigation.
-Textual structure aids navigation both by helping users create a mental map of the webpage or document they have found, 
-but also by exposing elements utilized by screen readers to make your work accessible.
+Textual structure aids navigation both by helping users create a mental map of the 
+webpage or document they have found, but also by exposing elements utilized by 
+screen readers to make your work accessible.
 
 Textual content is created and aggregated in so many forms, using so many
 different programs, that it is difficult to specify strategies beyond headings,
@@ -198,7 +219,7 @@ information as well as creating, manipulating, or storing it. For example:
 
 \item
   GitHub allows users to add tags to issues and commit messages which can then
-  be searched for across projects.
+  be searched across projects.
 
 \item
   Electronic lab notebooks can use XML schemas like Darwin Core, EML, or FITS
@@ -257,10 +278,11 @@ helps to pick one that makes simple things simple. For example, most website
 generators allow you to type tags into an article's header without having to
 define them first. This can lead to a proliferation of synonymous (or
 misspelled) tags, but some occasional cleanup is better than tackling a mountain
-of untagged information.
-Repositories that force metadata creation upon submission greatly assist efforts to make work product findable, 
-and researchers would be well served to replicate those metadata elements within their own file storage schemas.
-Indeed, creating an internal taxonomy (list of terms) or ontology (list of relationships) at the beginning of a project can make assigning metadata much easier.
+of untagged information. Repositories that force metadata creation upon submission 
+greatly assist efforts to make work product findable, and researchers would be 
+well served to replicate those metadata elements within their own file storage 
+schemas. Indeed, creating an internal taxonomy (list of terms) or ontology (list of
+relationships) at the beginning of a project can make assigning metadata much easier.
 
 You should also examine how metadata can be transferred from an old system to a
 new one if you have the luxury of switching software (or have had a change
@@ -281,10 +303,11 @@ available from the system'' \cite{Rosenfeld2015}. You have probably seen or done
 something similar with a print book, trying to determine if it's one you want by
 looking at the table of contents and the back cover. These two functions work
 together because search allows users to find information they know they need,
-whereas browsing allows users to find information they don't know that they need
-\cite{Bates2002}.
-Designing for both browsing and searching is especially pertinent in a search algorithm environment that often dynamically creates results unique to each individual search executed, 
-influenced by the user's previous interaction with a particular website and/or internet browser.
+whereas browsing allows users to find information they don't know that they 
+need\cite{Bates2002}. Designing for both browsing and searching is especially 
+pertinent in a search algorithm environment that often dynamically creates 
+results unique to each individual search executed, influenced by the user's 
+previous interaction with a particular website and/or internet browser.
 
 You should therefore make information accessible both ways and make it easy to
 move from searching to browsing and back again. Tags and other metadata help
@@ -443,7 +466,7 @@ content analysis, but is-ness issues will probably affect people's ability to
 use your information, so you may want to add metadata to make it explicit.
 
 A simple example of this is a blog post on a researcher's professional website. The post is \emph{about} a
-subject, like a book review, but it \emph{is} a blog post rather biographical details,
+subject, like a book review, but it \emph{is} a blog post rather than biographical details,
 bibliography, or a list of currently taught classes.  Going back to your
 users, what subjects are important to them? And do those topics carry over or
 change between differences in format? For a librarian, this is basically a
@@ -473,8 +496,8 @@ own use.
 Acronyms and abbreviations make communication between those who know them more
 efficient at the price of making them less accessible to newcomers. Spelling
 out acronyms and abbreviations that you take for granted (or hyperlinking to
-their definitions) therefore makes information easier to find and newcomers feel
-more welcome. When doing this, remember that acronyms are often repurposed by
+their definitions) therefore makes information easier to find and interpret for 
+a diverse audeince. When doing this, remember that acronyms are often repurposed by
 different professions or disciplines: what seems obvious to you is probably not
 obvious to people from other communities. Since every discipline has some common
 abbreviations, write them all out in full the first time they appear or create
@@ -485,11 +508,10 @@ or point to a term dictionary.
 Changing work habits is hard, so remember that while perfection isn't possible,
 progress is. Start by deciding whether to begin your next project with a new set
 of information organizing principles or to go back and alter existing artifacts
-\cite{Briney2015}.
-You might also consider this process as you would a research experiment, and incorporate one small change at a time.
-Whichever you choose, the ``ways you enforce your way of
-doing things changes how users think about the place[s] you made and perhaps
-ultimately, how they think about you'' \cite{Covert2014}.
+\cite{Briney2015}. You might also consider this process as you would a research 
+experiment, and incorporate one small change at a time. Whichever you choose, the
+``ways you enforce your way of doing things changes how users think about the 
+place[s] you made and perhaps ultimately, how they think about you'' \cite{Covert2014}.
 
 \bibliography{10-findable}
 
