--- a/10-findable.tex
+++ b/10-findable.tex
@@ -73,7 +73,7 @@ While you might think there are only a few relevant experts who know your field 
 novices and trainees will also need to use your work as they gain experience in the field,
 thereby making your actual user base considerably larger and more diverse. Furthermore,
 some readers need to access scholarship through an intermediary, such as translation
-software or a screen reader, as well. Being mindful of all potential readers and how they
+software or a screen reader, as well. Being mindful of all potential users and how they
 might need to interact with you and your work is the foundation of all ten tips.
 
 The information you wish to convey and the way it is currently organized may
