--- a/10-findable.tex
+++ b/10-findable.tex
@@ -77,7 +77,7 @@ software or a screen reader, as well. Being mindful of all potential users and h
 might need to interact with you and your work is the foundation of all ten tips.
 
 The information you wish to convey and the way it is currently organized may
-make perfect sense to you, but its meaning for your readers is determined by what
+make perfect sense to you, but its meaning for your users is determined by what
 \emph{they} interpret from the information they encounter and the way it's
 arranged. This means that the organizational structures you employ are a
 communication channel in their own right. To illustrate this, Borges created a
