--- a/10-findable.tex
+++ b/10-findable.tex
@@ -197,8 +197,7 @@ the completed version of their work.
 
 Findability at the document, post, or article level can be improved by taking
 advantage of the textual structures that information management programs provide
-\cite{Hedden2016}. <might be useful to define textual strctures here>. For example, 
-a key part of searching the web is scanning the
+\cite{Hedden2016}. For example, a key part of searching the web is scanning the
 text returned by search engines to see if it contains target information.
 Textual structure helps that process \cite{Krug2014}: formatted headers (rather
 than just enlarged text), bulleted or numbered lists, and \textbf{highlighting}
@@ -496,8 +495,9 @@ own use.
 Acronyms and abbreviations make communication between those who know them more
 efficient at the price of making them less accessible to newcomers. Spelling
 out acronyms and abbreviations that you take for granted (or hyperlinking to
-their definitions) therefore makes information easier to find and interpret for 
-a diverse audeince. When doing this, remember that acronyms are often repurposed by
+their definitions) therefore makes information easier to find and enables newcomers
+to participate in conversations that are considered technical or advanced. When 
+doing this, remember that acronyms are often repurposed by
 different professions or disciplines: what seems obvious to you is probably not
 obvious to people from other communities. Since every discipline has some common
 abbreviations, write them all out in full the first time they appear or create
