--- a/10-findable.tex
+++ b/10-findable.tex
@@ -128,7 +128,9 @@ certainly have information in lots of different formats, file types and location
 The second step in making things findable is to think ahead about the things you
 would want to be found at the completion of the project before cataloging what you
 have. That way you can have time to anticipate what can go where, and adapt if
-necessary before materials are published. This is particularly relevant when
+necessary before materials are published. 
+
+This is particularly relevant when
 archiving data. Different disciplines operate with their own distinct set of
 accepted standards of how things should be archived. One example of this can be
 found in the field of structural biology. Nearly all protein or molecular
@@ -168,8 +170,8 @@ we can catch a glimpse of the variety of user needs:
   items or in bulk for addition to an institutional repository.
 
 \item
-  Collaborators might links to articles, plus pointers to the protocols, 
-  software and data used in order to reproduce particular results or begin
+  Collaborators might links to articles, protocols, software or 
+  data used in order to reproduce particular results, or begin
   their own lineage of inquiry.
 
 \item
@@ -186,11 +188,11 @@ we can catch a glimpse of the variety of user needs:
 \noindent
 Each of the users might want content organized chronologically or topically.
 In websites that are generated programmatically using tools such as Blogdown\cite{Xie2017} 
-or Wordpress \cite{Williams2015} these organization features may be simple to implement, 
-but increasing the number of site navigation options may also make the website confusing 
-to navigate and make it unclear how the things they find are related to each other. 
+or Wordpress \cite{Williams2015} these types organization features may be simple to implement. 
+However, increasing the number of site navigation options may make the website confusing 
+to navigate and make it unclear how the things the users find are related to each other. 
 Together, authors must strike a balance between offering filtering and searching options, 
-and being as inclusive as possible when deciding what materials are worth sharing upon 
+and being as inclusive as possible when deciding what materials are worth sharing in 
 the completed version of their work.
 
 \rulemajor{3. Use textual structure.}
