--- a/10-findable.tex
+++ b/10-findable.tex
@@ -27,10 +27,10 @@
 
 Information ecosystems consist of users, context, and content, all three of
 which must be addressed to make information findable and usable. Library science
-principles are a framework navigating the information ecosystem. They help researchers
+principles are a framework for navigating information ecosystems. They help researchers
 improve findability by focusing on the full scope of their users' needs and by leveraging 
 structural elements of software that create, store, and access data,
-research findings, or academic communications stored locally or shared on the
+research findings, or academic communications, whether stored locally or shared on the
 internet. As scholars evaluate their research communication strategies,
 they can use these steps to improve how their research is discovered and communicated.
 
@@ -54,17 +54,17 @@ researchers manage the data and other digital objects associated with their prof
 work. The FAIR principles encourage data to be: Findable, Accessible,
 Interoperable, and Reproducible. Indeed, research reproducibility hinges
 on the other 3 principles, which align completely with the following 10 tips. 
-This paper is concerned with findability both including research data and extends beyond
+This paper is concerned with findability, both including research data and extending beyond
 it to encompass all types of work products produced during a researcher's career, 
 inside or outside academic settings.
 
 Library science offers ways to work through the maze of information generated in
 professional life, and librarians' skills can be applied by any researcher who
-feels overwhelmed. The ten quick tips in this paper build on the fact that all
+seeks to improve access to and utilization of their research, data and other work product. The ten quick tips in this paper build on the fact that all
 information ecosystems have users, context, and content \cite{Rosenfeld2015}.
 To solve the information retrieval problem, researchers must therefore think
 broadly about who needs that information and the context within which it is
-created as well as its actual content.
+created, as well as its actual content.
 
 \rulemajor{1. Design for a wide range of users.}
 
@@ -75,7 +75,7 @@ While you might think there are only a few relevant experts who know your field 
 novices and trainees will also need to use your work as they gain experience in the field,
 thereby making your actual user base considerably larger and more diverse. Furthermore,
 some users need to access scholarship through an intermediary, such as translation
-software or a screen reader, as well. Being mindful of all potential users and how they
+software or a screen reader. Being mindful of all potential users and how they
 might need to interact with you and your work is the foundation of all ten tips.
 
 The information you wish to convey and the way it is currently organized may
@@ -93,9 +93,9 @@ those of the audience. Therefore when preparing materials for sharing it is impo
 to establish context, to use clear and concise language, and minimize the use of jargon.
 
 More concretely, consider the website of a faculty member coming up for tenure:
-She created the website as post-doc to publicize her papers and to make it
+she created the website as post-doc to publicize her papers and to make it
 easier to fill out grant applications by listing professional activities in one
-place, but the site might be useful in other cases as well:
+place.  Yet the site might be useful in other cases as well:
 
 \begin{itemize}
 
@@ -130,16 +130,15 @@ would want to be found at the completion of the project before cataloging what y
 have. That way you can have time to anticipate what can go where, and adapt if
 necessary before materials are published. 
 
-This is particularly relevant when
-archiving data. Different disciplines operate with their own distinct set of
+This is particularly relevant when you know your data will be archived. Different disciplines operate with their own distinct set of
 accepted standards of how things should be archived. One example of this can be
 found in the field of structural biology. Nearly all protein or molecular
 structures are submitted to the Protein Data Bank (PDB) which creates citable
 identifers for each submission and follows a set of standard file types to enable 
 reuse. This makes protein structures easily searchable with their identifier 
 and easily reusable since files are uploaded in a standardized and widely-used 
-format\cite{Wilkinson2016}. Following the standards set by experts in the field, 
-will reduce the barrier to finding relevant materials associated with your work.
+format\cite{Wilkinson2016}. Following the standards set by experts in the field 
+as you design your information ecosystem will reduce the barrier to finding relevant materials associated with your work.
 
 Figuring out what ``done'' will look like can be personally motivating, but once
 again, you must be mindful of what your users will consider a useful outcome, which
@@ -155,7 +154,7 @@ piece of information within a specific file or item within a webpage. Depending 
 your content, you may have challenges in all three areas; the remaining tips on 
 context and content will help you address these issues.
 
-Elaborating on the example from the previous tip about the faculty member's website 
+Elaborating on the example from the previous tip about the faculty member's website, 
 we can catch a glimpse of the variety of user needs:
 
 \begin{itemize}
@@ -170,7 +169,7 @@ we can catch a glimpse of the variety of user needs:
   items or in bulk for addition to an institutional repository.
 
 \item
-  Collaborators might links to articles, protocols, software or 
+  Collaborators might need links to articles, protocols, software or 
   data used in order to reproduce particular results, or begin
   their own lineage of inquiry.
 
@@ -189,11 +188,9 @@ we can catch a glimpse of the variety of user needs:
 Each of the users might want content organized chronologically or topically.
 In websites that are generated programmatically using tools such as Blogdown\cite{Xie2017} 
 or Wordpress \cite{Williams2015} these types organization features may be simple to implement. 
-However, increasing the number of site navigation options may make the website confusing 
-to navigate and make it unclear how the things the users find are related to each other. 
-Together, authors must strike a balance between offering filtering and searching options, 
-and being as inclusive as possible when deciding what materials are worth sharing in 
-the completed version of their work.
+However, increasing the number of site navigation options may confuse the user if it is unclear how items relate to each other. 
+Authors must strike a balance between offering filtering and searching options, 
+and being as inclusive as possible when deciding how materials will be structured and shared with their users.
 
 \rulemajor{3. Use textual structure.}
 
@@ -275,7 +272,7 @@ inconsistencies to creep in. For example:
 
 The most difficult thing about metadata, however, is getting into the habit of
 creating it in the first place. If you get to choose what software to use, it
-helps to pick one that makes simple things simple. For example, most website
+helps to pick one that simplifies metadata creation. For example, most website
 generators allow you to type tags into an article's header without having to
 define them first. This can lead to a proliferation of synonymous (or
 misspelled) tags, but some occasional cleanup is better than tackling a mountain
@@ -286,12 +283,12 @@ schemas. Indeed, creating an internal taxonomy (list of terms) or ontology (list
 relationships) at the beginning of a project can make assigning metadata much easier.
 
 You should also examine how metadata can be transferred from an old system to a
-new one if you have the luxury of switching software (or have had a change
+new one if you have the luxury of switching software (or have a change
 forced on you). Some form of XML is usually the best option when doing this: it
 is likely to be with us for many years to come, and the same pedantry that makes
 it tedious for human beings to type and read ensures that programs can read it
 without having to guess what its creators actually intended.
-FAIR principles help ease the burden of software and storage migration, by encouraging researchers to plan for interoperability in software and data storage from the beginning of their projects, concerns about data migration are obviated.
+FAIR principles help ease the burden of software and storage migration, by encouraging researchers to plan for interoperability in software and data storage from the beginning of their projects, obviating concerns about data migration.
 
 \rulemajor{5. Use search \emph{and} browsing}
 
@@ -340,7 +337,7 @@ trails on websites give users a sense of where the information resides and
 suggest new paths they can take \cite{Krug2014}. For example, the URLs of a
 website might all include the name of a section of the site, such as
 \texttt{/papers/} or \texttt{/blog/}.  
-DOIs and ORCID iDs function as the best kind of internet 'signage,' ensuring users never encounter a "webpage not found" error message in the course of retrieving a particular publication.
+DOIs and ORCID iDs function as the best kind of internet `signage,' ensuring users never encounter a``webpage not found" error message in the course of retrieving a particular publication.
 
 While much has been written about web usability in general
 \cite{Covert2014,NNG2020}, library science focuses on information-seeking
@@ -351,7 +348,7 @@ as highway signs with regards to appearance, style, and type of
 information. Wherever possible (and it's \emph{always} possible), use mechanisms
 that users will have become familiar with elsewhere, such as the vertically
 nested folders of file browsers or the left-to-right arrangement of breadcrumb
-trails.
+trails. Persistent identifiers are a great example of markers that consistently aid navigation in structured (e.g., databases) and unstructured (e.g., personal websites) environments.
 
 \rulemajor{7. Use meaningful names.}
 
@@ -388,7 +385,7 @@ If you have things to name that are not files, such as projects, web pages, or
 document headings, remember that the more generic a term is, the harder it is to
 search for: naming a raw data file ``raw'' or a downloaded file ``download''
 makes finding the information they contain nearly impossible. A quick test is to
-search for the name before adopting it: if dozens of unrelated pages come up,
+search for the name before adopting it: if dozens of unrelated results come up,
 you may want to pick a different name. You should also think about nicknames or
 shortened versions of your names and make sure they are present in text or tags
 so that the content can be discovered by a search engine and a user.
@@ -442,7 +439,7 @@ other inconsistencies.
 
 What terms you use as tags for personal consumption may not matter much, but
 work that is shared with colleagues should use particular terms or tags that
-conform to certain standards \cite{FAIR2020}.  These terms typically come from
+conform to relevant standards \cite{FAIR2020}.  These terms typically come from
 taxonomies, thesauri, and ontologies: taxonomies and thesauri generally have
 built-in subject hierarchies that can help you create navigational structure,
 while ontologies map relationships between ideas. Crucially, all three are
@@ -497,7 +494,7 @@ own use.
 Acronyms and abbreviations make communication between those who know them more
 efficient at the price of making them less accessible to newcomers. Spelling
 out acronyms and abbreviations that you take for granted (or hyperlinking to
-their definitions) therefore makes information easier to find and enables newcomers
+their definitions) makes information easier to find and enables newcomers
 to participate in conversations that are considered technical or advanced. When 
 doing this, remember that acronyms are often repurposed by
 different professions or disciplines: what seems obvious to you is probably not
