--- a/10-findable.tex
+++ b/10-findable.tex
@@ -52,8 +52,8 @@ and teaching.
 In the last 4 years, growing adoption of FAIR principles \cite{Wilkinson2016} has helped
 researchers manage the data and other digital objects associated with their professional
 work. The FAIR principles encourage data to be: Findable, Accessible,
-Interoperable, and Reproducible. Indeed, research reproducibility hinges
-on the other 3 principles, which align completely with the following 10 tips. 
+Interoperable, and Reusable. Indeed, research reproducibility hinges
+on these four principles, which form the backbone the following 10 tips. 
 This paper is concerned with findability, both including research data and extending beyond
 it to encompass all types of work products produced during a researcher's career, 
 inside or outside academic settings.
